[package]
name = "synod"
version = "0.1.0"
authors = ["Armand Adroher <aadroher@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.2"
num-traits = "0.2"
rand = "0.7"
# slow_primes = "0.1.14"
primal = "0.2"
